--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,21 @@
 {
   "name": "fs-ecomm",
   "version": "1.0.0",
-  "description": "fs-ecom server dependencies",
+  "description": "Ecomm JSON-API ",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "sl",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
