--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-
+base = ""
 publish = "build"
 
 command = "npm run build"
@@ -8,3 +8,15 @@ command = "npm run build"
 
 [[plugins]]
 package = "@netlify/plugin-lighthouse" # Installs Lighthouse Build plugin
+
+
+[plugins.inputs.thresholds]
+    performance = 0.7
+    accessibility = 0.7
+    best-practices = 0.7
+    seo = 0.7
+    pwa = 0.3   # avoid failed report
+
+  # optional, deploy the lighthouse report to a path under your site
+  [plugins.inputs]
+    output_path = "reports/lighthouse.html"
