--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "font-awesome": "^4.7.0",
     "lazysizes": "^5.3.2",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +48,9 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.5.1",
+    "sass-loader": "^12.6.0"
   }
 }
