product page amends

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
   "semi": true,
   "bracketSpacing": true,
-  "printWidth": 80,
   "singleQuote": true,
-  "jsxSingleQuote": false,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "none",
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "proseWrap": "always",
+  "htmlWhitespaceSensitivity": "strict",
+  "endOfLine": "lf",
+  "jsxSingleQuote": false
 }
