--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "style:lint": "prettier --check '**/*.{js,jsx}'",
+    "style:lint-fix": "prettier --write '**/*.{js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
