--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -20,4 +20,4 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.FS_ECOMM_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
