--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "lazysizes": "^5.3.2",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
