--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
-  "semi": true,
-  "bracketSpacing": true,
+  "semi": false,
+  "brahttp://localhost:3000cketSpacing": true,
   "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "trailingComma": "none",
-  "bracketSameLine": true,
+  "trailingComma": "es5",
+  "bracketSameLine": false,
   "arrowParens": "always",
   "proseWrap": "always",
   "htmlWhitespaceSensitivity": "strict",
