--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "style:lint": "prettier --check '**/*.{js,jsx}'",
-    "style:lint-fix": "prettier --write '**/*.{js,jsx}'"
+    "style:lint-fix": "prettier --write '**/*.{js,jsx}'",
+    "cypress": "npx cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^9.5.2",
     "env-cmd": "^10.1.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
