--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,46 @@ build/*
 node-firebase-api
 
 /cypress/
+
+
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
+cypress/reference/
+cypress/support/
+cypress/plugins/
+cypress/fixtures/
+cypress/*/videos
+
+readme.md
+
+/components/product-details/
+
+
+.vscode
+.env.local
+.env.production
