--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "style:lint-fix": "prettier --write '**/*.{js,jsx}'",
     "cypress:run": "DEBUG=cypress: * cypress run",
     "cypress:open": "cypress open",
-    "cypress:open:debugger": "DEBUG=cypress:* cypress open"
+    "cypress:open:debugger": "DEBUG=cypress:* cypress open",
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +57,9 @@
   "devDependencies": {
     "cypress": "^9.5.2",
     "env-cmd": "^10.1.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
     "sass-loader": "^12.6.0"
