--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,10 +26,12 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended"
   ],
 
-  "plugins": ["react", "react-hooks"],
+  "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
   "rules": {
     "no-case-declarations": 0,
     "react/prop-types": 0,
@@ -41,6 +43,11 @@
     "react/jsx-no-target-blank": 0,
     "no-mixed-spaces-and-tabs": 0,
     "no-cond-assign": 0,
+    "no-restricted-syntax": 0,
+    "no-use-before-define": 0,
+    "no-param-reassign": 0,
+    "no-underscore-dangle": 0,
+    "no-nested-ternary": 0,
     "react/jsx-key": 0,
     "react/display-name": 0,
     "no-lone-blocks": 1,
@@ -48,6 +55,7 @@
     "no-unexpected-multiline": 0,
     "no-prototype-builtins": 0,
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "prettier/prettier": "error"
   }
 }
