--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,7 @@
     "no-underscore-dangle": 0,
     "no-nested-ternary": 0,
     "react/jsx-key": 0,
+    "no-debugger":"off",
     "react/display-name": 0,
     "no-lone-blocks": 1,
     "jsx-a11y/accessible-emoji": 0,
