netlify redirect fixed error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,19 +37,19 @@
     "react/prop-types": 0,
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "no-unused-vars": "error",
+    "no-unused-vars": "warn",
     "jsx-a11y/anchor-is-valid": 0,
     "react/no-unescaped-entities": 0,
     "react/jsx-no-target-blank": 0,
     "no-mixed-spaces-and-tabs": 0,
     "no-cond-assign": 0,
     "no-restricted-syntax": 0,
-    "no-use-before-define": 0,
+    "no-use-before-define": "warn",
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
     "no-nested-ternary": 0,
     "react/jsx-key": 0,
-    "no-debugger":"off",
+    "no-debugger":"warn",
     "react/display-name": 0,
     "no-lone-blocks": 1,
     "jsx-a11y/accessible-emoji": 0,
