--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,28 +35,31 @@
   "rules": {
     "no-case-declarations": 0,
     "react/prop-types": 0,
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error",
-    "no-unused-vars": "warn",
+    "react/jsx-uses-react":0,
+    "react/jsx-uses-vars":0,
+    "no-unused-vars": 1,
     "jsx-a11y/anchor-is-valid": 0,
     "react/no-unescaped-entities": 0,
     "react/jsx-no-target-blank": 0,
     "no-mixed-spaces-and-tabs": 0,
     "no-cond-assign": 0,
     "no-restricted-syntax": 0,
-    "no-use-before-define": "warn",
+    "no-use-before-define": 1,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
     "no-nested-ternary": 0,
     "react/jsx-key": 0,
-    "no-debugger":"warn",
+    "no-debugger":1,
     "react/display-name": 0,
     "no-lone-blocks": 1,
     "jsx-a11y/accessible-emoji": 0,
     "no-unexpected-multiline": 0,
     "no-prototype-builtins": 0,
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "prettier/prettier": "error"
+    "object-curly-newline": 0,
+    "curly": 0,
+
+    "react-hooks/rules-of-hooks":0,
+    "react-hooks/exhaustive-deps": 1,
+    "prettier/prettier":0
   }
 }
