--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
     "react/prop-types": 0,
     "react/jsx-uses-react":0,
     "react/jsx-uses-vars":0,
-    "no-unused-vars": 1,
+    "no-unused-vars": "off",
     "jsx-a11y/anchor-is-valid": 0,
     "react/no-unescaped-entities": 0,
     "react/jsx-no-target-blank": 0,
@@ -46,6 +46,7 @@
     "no-restricted-syntax": 0,
     "no-use-before-define": 1,
     "no-param-reassign": 0,
+    "no-console": "warn",
     "no-underscore-dangle": 0,
     "no-nested-ternary": 0,
     "react/jsx-key": 0,
