--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "lazysizes": "^5.3.2",
