--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:production": "env-cmd -f ./.env.production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier:lint": "prettier --check '**/*.{js,jsx}'",
+    "prettier": "prettier --check '**/*.{js,jsx}'",
     "prettier:fix": "prettier --write '**/*.{js,jsx}'",
     "cypress:run": "DEBUG=cypress: * cypress run",
     "cypress:open": "cypress open",
     "cypress:open:debugger": "DEBUG=cypress:* cypress open",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "npm run lint:js -- --fix",
     "lighthouse:audit": "lighthouse http://localhost:3000 --view"
   },
   "eslintConfig": {
