--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "axios": "^0.26.1",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "lazysizes": "^5.3.2",
