--- a/.prettierignore
+++ b/.prettierignore
@@ -7,38 +7,25 @@ cypress/
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+
 
 # testing
-/coverage
+
 
 # production
-/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+
+
+
+.env-cmdrc
+
+
+
+
 
 .idea
-cypress/reference/
-cypress/support/
-cypress/plugins/
-cypress/fixtures/
-cypress/*/videos
-
-readme.md
-
-/components/product-details/
-
 
 .vscode
-.env.local
-.env.production
+
