--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
+  "exports": {
+    "require": "./config.js"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -59,7 +62,7 @@
   },
   "devDependencies": {
     "cypress": "^9.5.2",
-    "env-cmd": "^10.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
