--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-mock-store": "^1.5.4",
+    "sass": "^1.49.11",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
@@ -69,7 +70,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
     "sass-loader": "^12.6.0"
   }
